--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react_project_one",
+  "homepage": "https://krisbaranski.github.io/react_project_one/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,10 +41,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://krisbaranski.github.io/react_project_one/",
-  
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -b gh-deploy -d build"
-  
+  }
 }
