--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_project_one",
-  "homepage": "https://krisbaranski.github.io/react_project_one/",
+  "homepage": "https://krisbaranski.github.io/react_project_one",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
